text-align fix

--- a/assets/sass/_spotlight.sass
+++ b/assets/sass/_spotlight.sass
@@ -45,6 +45,7 @@
     order: 2
     max-width: 48em
     width: 60%
+    text-align: right
 
     .more
 
@@ -63,6 +64,9 @@
     -webkit-flex-direction: row-reverse
     -ms-flex-direction: row-reverse
     flex-direction: row-reverse
+
+    .content
+      text-align: left
 
 @media screen and (max-width: 1280px)
   .spotlight
